crates/host-macros/tests/compile_fail/unknown_key.stderr
error: expected one of: `mode`, `hosts`, `config`
 --> tests/compile_fail/unknown_key.rs:2:5
  |
2 |     guests: {},
  |     ^^^^^^
